[package]
name = "argc"
version = "1.16.0"
edition = "2021"
authors = ["sigoden <sigoden@gmail.com>"]
description = "A bash cli framework, also a task management & automation tool."
license = "MIT OR Apache-2.0"
homepage = "https://github.com/sigoden/argc"
repository = "https://github.com/sigoden/argc"
autotests = false
categories = ["command-line-utilities"]
keywords = ["command-line", "task-runner", "argument-parser"]

[dependencies]
anyhow = "1"
convert_case = "0.6"
indexmap = { version = "2.1", features = ["serde"] }
nom = "7.1"
either = "1.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", features = ["preserve_order"] }
which = "6.0"
shell-words = "1.1"
textwrap = "0.16"
dirs = "5.0"
num_cpus = "1.16"
threadpool = "1.8"
base64 = "0.22"
natord = "1.0"
semver = "1.0"
roff = "0.2"

[dev-dependencies]
insta = "1.30"
assert_cmd = "2"
assert_fs = "1"
rstest = "0.18"
predicates = "3"

[target.'cfg(unix)'.dev-dependencies]
libc = "0.2"

[profile.release]
lto = true
strip = true
opt-level = "z"

[[test]]
name = "integration"
path = "tests/tests.rs"
